deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts
  labels:
    app: accounts
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
  selector:
    app: accounts
