deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: accounts
  labels:
    app: accounts
spec:
  to:
    kind: Service
    name: accounts
  port:
    targetPort: 8080
  tls:
    termination: edge
